kargo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kargo
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: kargo
    sectionName: websecure
  hostnames:
  - kargo.bennaylor.dev
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: kargo-api
      port: 80
      weight: 1
  # Webhook addresses
  - matches:
    - path:
        type: PathPrefix
        value: /generic/
    - path:
        type: PathPrefix
        value: /github/
    backendRefs:
    - group: ""
      kind: Service
      name: kargo-external-webhooks-server
      port: 80
      weight: 1
